# AnomalySoundDetection

./: .gitignore  README.md  classification_report2.csv
Software/anomaly-data-loader/: README.md  pyproject.toml  requirements.txt
Software/anomaly-data-loader/data/: audio_chunks
Software/anomaly-data-loader/data/embeddings/: ml17_280a_0083_chunk0000.npy  ml17_280a_0083_chunk0001.npy  ml17_280a_0083_chunk0002.npy  ml17_280a_0083_chunk0003.npy  ml17_280a_0083_chunk0004.npy  ml17_280a_0083_chunk0005.npy  ml17_280a_0083_chunk0006.npy  ml17_280a_0083_chunk0007.npy  ml17_280a_0083_chunk0008.npy  ml17_280a_0083_chunk0009.npy  ml17_280a_0083_chunk0010.npy  ml17_280a_0083_chunk0011.npy  ml17_280a_0083_chunk0012.npy  ml17_280a_0083_chunk0013.npy  ml17_280a_0083_chunk0014.npy  ml17_280a_0083_chunk0015.npy  ml17_280a_0083_chunk0016.npy  ml17_280a_0083_chunk0017.npy  ml17_280a_0083_chunk0018.npy  ml17_280a_0083_chunk0019.npy  ml17_280a_0083_chunk0020.npy  ml17_280a_0083_chunk0021.npy  ml17_280a_0083_chunk0022.npy  ml17_280a_0083_chunk0023.npy  ml17_280a_0083_chunk0024.npy  ml17_280a_0083_chunk0025.npy  ml17_280a_0083_chunk0026.npy  ml17_280a_0083_chunk0027.npy  ml17_280a_0083_chunk0028.npy  ml17_280a_0083_chunk0029.npy  ml17_280a_0083_chunk0030.npy  (+152 more)
Software/anomaly-data-loader/scripts/: create_references.py  csv_convert.py  csv_convert2.py  run_pipeline.py  sort_chunks.py  sorting_conf.yaml
Software/anomaly-data-loader/src/: data_loader.py  extractor.py  prepare_features.py  ref_builder.py  saver.py  utils.py
Software/anomaly-data-loader/tests/: test_pipeline.py
(+457 files in other folders)
