[tool.poetry]
name = "anomaly-data-loader"
version = "0.1.0"
description = "A project for detecting anomalous sounds by processing audio data."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
librosa = "^0.8.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
torch = "^1.9.0"
soundfile = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"